// Vitest Snapshot v1

exports[`hBox box 1`] = `
<span
  class="hbox"
>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
</span>
`;

exports[`rect box 1`] = `
<span
  class=""
  style="margin-bottom: -0.5000em; min-height: 1.5000em; width: 2em;"
/>
`;

exports[`symbol box 1`] = `
<span
  class="box math-i"
  style="height: 0.4306em; line-height: 0.3621em;"
>
  a
</span>
`;

exports[`vBox box 1`] = `
<span
  class="vlist"
  style="height: 1.9306em; vertical-align: -0.5000em;"
>
  <span
    class="hbox"
  >
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
  </span>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em; bottom: 1.0694em;"
  >
    a
  </span>
</span>
`;

exports[`vBox box 2`] = `
<span
  class="vlist"
  style="height: 0.4306em; vertical-align: 1.0000em;"
>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
</span>
`;

exports[`vStackBox box 1`] = `
<span
  class="vlist"
  style="vertical-align: -3.0000em;"
>
  <span
    class="hbox"
  >
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
  </span>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
</span>
`;
